# mcp_candidate_evaluation

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  server.py  test_llm_scrubbing.py  test_unified_workflow.py
evaluation/: evaluation.xml  test_llm_scrubbing.py  test_unified_workflow.py
evaluation/benchmark/: APPROACH.md  analysis.ipynb  analysis_executed.ipynb  config.py  config_v2.py  demo_plots.ipynb  demo_plots.py  demo_plots_executed.ipynb  runner.py  runner_v2.py
evaluation/benchmark/results/: benchmark_20260216_132501.jsonl  benchmark_20260216_133054.jsonl  benchmark_20260216_133248.jsonl  benchmark_20260216_133417.jsonl  benchmark_v2_20260216_143220.jsonl  benchmark_v2_20260216_150914.jsonl
