[project]
name = "candidate-evaluation-mcp"
version = "0.1.0"
description = "MCP server for candidate evaluation that aims to reduce the presence of protected characteristics using a two-LLM architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
openai = [
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dominicholcomb/mcp_candidate_evaluation"
Repository = "https://github.com/dominicholcomb/mcp_candidate_evaluation"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
